[package]
name = "px"
version = "0.1.0"
description = "Executor for project's scripts"
edition = "2021"

[[bin]]
name = "px"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["cargo", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[package.metadata.scripts]
build = "cargo build"
run = "cargo run"
release = "cargo build --release"
build-win = "docker run --rm -v /Users/theboxer/RustroverProjects/project-executor:/app rust_cross_compile/windows"
